fix issue not showing correctly on width 1200px devices

--- a/src/groups/MapDiagram/MapDiagram.scss
+++ b/src/groups/MapDiagram/MapDiagram.scss
@@ -4,7 +4,7 @@
 .map-diagram {
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1201px) {
   .map-diagram--mobile {
     display: none;
   }
